# fastapi-redis-docker-api

./: README.md  pyproject.toml
docker/: .dockerignore  Dockerfile  docker-compose.yaml
src/app/: config.py
src/app/data/: db.py
src/app/service/: exceptions.py  service.py
src/app/web/api/: app.py  depends.py  router.py  schemas.py
