[project]
name = "fastapi-redis-docker-api"
version = "0.1.0"
authors = [
    { name = "ggorev", email = "George@211.ru" },
]
dependencies = [
    "uvicorn==0.30.5",
    "fastapi==0.112.0",
    "redis==5.0.8",
    "pydantic-settings==2.4.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
qa = [
    "flake8==7.1.1",
    "mypy==1.11.1",
    "black==24.8.0",
    "pre-commit==3.8.0",
    "isort==5.13.2",
]

[tool.isort]
line_length = 120
force_alphabetical_sort_within_sections = true
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
force_grid_wrap = 2

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true

disallow_untyped_defs = true
